auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05f2e81a",
+   "id": "287547ba",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e09992",
+   "id": "c0449c63",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f448e0e7",
+   "id": "bcbc29a5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6647c6e9",
+   "id": "28adec22",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0ae71f",
+   "id": "dc75805a",
    "metadata": {},
    "source": [
     "### References\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e3e7ee",
+   "id": "cdd47cac",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de71ac0",
+   "id": "da06d21f",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5027747c",
+   "id": "100f4203",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229dc51a",
+   "id": "5e61ab57",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3224a6",
+   "id": "10a707bf",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd58fd0",
+   "id": "ed3295ee",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04ce64c",
+   "id": "b8b3a70e",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff979654",
+   "id": "65dce797",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6ad1fc",
+   "id": "7d2cec9b",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acba0898",
+   "id": "444a4b23",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b41e35e0",
+   "id": "f5b42323",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cdafbad",
+   "id": "c8d6a3ec",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acec809a",
+   "id": "2ce80594",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c766cbf",
+   "id": "947e3579",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a55d2e",
+   "id": "647db3e8",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7873f9",
+   "id": "f16c6073",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15becfdd",
+   "id": "30dfcedb",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82a63c2",
+   "id": "6302e941",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fce040a",
+   "id": "6ea9a2ba",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d75096",
+   "id": "2277b732",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a3f9e45",
+   "id": "341576e6",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50354019",
+   "id": "e8ebb657",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f975f25b",
+   "id": "9df5d97d",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad78668a",
+   "id": "8f18dd7c",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0c2918",
+   "id": "395d2b3c",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60108a3b",
+   "id": "83fcfeae",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7540a2fb",
+   "id": "5766e927",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee30bb1b",
+   "id": "069000c6",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f8ce10",
+   "id": "2ff27cf5",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9352aae",
+   "id": "75469ca3",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a095e12",
+   "id": "c6941d1f",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2884311",
+   "id": "d1b9b45c",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8844609e",
+   "id": "39a66024",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a002ca3a",
+   "id": "8dfab0c5",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07536bf3",
+   "id": "ce6c8e45",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a95bb0f",
+   "id": "6af86ee1",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb696e3d",
+   "id": "3187f2c4",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24264ce7",
+   "id": "584ec8ce",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efde5a90",
+   "id": "7c0d45e8",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8787d542",
+   "id": "df7c9fc6",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4648f863",
+   "id": "b34a2aa8",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54055e48",
+   "id": "f3404452",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1708e0",
+   "id": "c9734f17",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3d4ede",
+   "id": "26a4e515",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "555e0656",
+   "id": "4e696fe7",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36daa0ca",
+   "id": "64a4e389",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291ab399",
+   "id": "a7ac038e",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2452b113",
+   "id": "2c632536",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07dfd94d",
+   "id": "a381e8e0",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352800f6",
+   "id": "7e26f3d3",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda4dc7b",
+   "id": "6a7005c4",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d3d7a2",
+   "id": "78611a93",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1c867d",
+   "id": "7884acc4",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac6faa6",
+   "id": "3a2f81c6",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a4a77f",
+   "id": "5e518c0a",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb16d29",
+   "id": "63e8a207",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82cd3377",
+   "id": "5eeffbda",
    "metadata": {
     "hide-output": false
    },
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b11a8fd4",
+   "id": "f9572951",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac089743",
+   "id": "1e640c7f",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb10b0e",
+   "id": "d8f69795",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ef749c",
+   "id": "cf2e43e6",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36641146",
+   "id": "de0ed8dd",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777d8f3f",
+   "id": "d74ad19e",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17ca6c52",
+   "id": "cc0a87d0",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5bc5a77",
+   "id": "7bd7783d",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa0d2f1",
+   "id": "69bbb364",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebaea434",
+   "id": "eb814a0c",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f31ad2",
+   "id": "f1677c6d",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2afc3022",
+   "id": "059d8779",
    "metadata": {
     "hide-output": false
    },
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b8bc29",
+   "id": "c2d8b1be",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd3e0eb",
+   "id": "83368bed",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6d5c7fd",
+   "id": "3b712d6e",
    "metadata": {
     "hide-output": false
    },
@@ -1226,7 +1226,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309074.5176818,
+  "date": 1764310726.970857,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
