--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "548ea9e3",
+   "id": "d7718679",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5281d1",
+   "id": "b04bb620",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad3a46c",
+   "id": "6aed7fe7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12813fb2",
+   "id": "e86ce29f",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240628d7",
+   "id": "740ffd07",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085c9ea6",
+   "id": "69f33e1d",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2fa185",
+   "id": "f6b5e272",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa46584",
+   "id": "61f8800b",
    "metadata": {},
    "source": [
     "## The Model"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1a30f25",
+   "id": "fdcd2e8a",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa7840b",
+   "id": "1667dcdb",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -186,7 +186,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-4e9fea72-f271-4155-89d3-da9503286c25'></a>\n",
+    "<a id='equation-b0c9d20c-70da-485a-855a-8b69489f83f0'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -199,7 +199,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-3ca74e6e-e294-4722-a819-88347551cc5b'></a>\n",
+    "<a id='equation-ff35da81-2a7c-47de-8e14-d4aa6307203b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b01578f8",
+   "id": "7386f7f9",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -253,7 +253,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-773bd991-5793-48f4-9bf2-95148caa032a'></a>\n",
+    "<a id='equation-ca924d41-e202-4f62-9ebf-e901bfbead3e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -263,7 +263,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-7dea60ee-1714-48ac-9e5e-87a9f8ece1a3'></a>\n",
+    "<a id='equation-f5707a02-248b-413b-ad6b-3e88029bc76e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -277,7 +277,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-ae5ef8cd-b287-49a6-8a75-df8eecd0f040'></a>\n",
+    "<a id='equation-e5438236-e83c-4c0e-bdcc-4804362ca9bd'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -287,7 +287,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-b0e52895-7abc-42b5-a9ab-cfc9bfad78b3'></a>\n",
+    "<a id='equation-76f2a3ec-277d-4f39-8aa1-e8daf700b8d8'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb2230e",
+   "id": "d9d64a10",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -312,7 +312,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-06cd49c5-d19d-451d-bda1-8789d95564ca'></a>\n",
+    "<a id='equation-de3c332e-3853-4afb-b444-2dfe44503e48'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -324,7 +324,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-2ecfce19-e984-49ca-9aaf-9c8764ae9667'></a>\n",
+    "<a id='equation-9251d4e9-df9a-4e10-99fe-5d9d55901296'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37607b69",
+   "id": "0590e376",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef6d631",
+   "id": "41aa9891",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee3c77b",
+   "id": "f6f4383a",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682fef91",
+   "id": "9e239af7",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626586b0",
+   "id": "d697ce5e",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f398d3a",
+   "id": "e832673f",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52e339fa",
+   "id": "12e65ebb",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993e51c7",
+   "id": "ca3d58de",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff361d70",
+   "id": "ab58e8e2",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8ce91f8",
+   "id": "e18b439b",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9d1d72",
+   "id": "7c60ac17",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c77484c0",
+   "id": "dec67ec6",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da32f300",
+   "id": "edf5b134",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b53fda",
+   "id": "affeda4f",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36457306",
+   "id": "d6d49ef8",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "900a35d4",
+   "id": "d4a7d6bc",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52811ba4",
+   "id": "bf75c057",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc44e89d",
+   "id": "56446e60",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f683f4e",
+   "id": "3ddf130e",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1aa6950",
+   "id": "582829d6",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb46154",
+   "id": "ffa48eb8",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51925540",
+   "id": "1a6178b4",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "071d4737",
+   "id": "f0bf6358",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e561da78",
+   "id": "9ebb30a8",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f7a478",
+   "id": "9de6ea00",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8704abe9",
+   "id": "07696f99",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d834bad",
+   "id": "b54bfcd6",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcc6fdc9",
+   "id": "ef6f6404",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50617c94",
+   "id": "cd2d75ce",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d038a8ef",
+   "id": "fdbc8561",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930bc713",
+   "id": "8bf81c7c",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f559fc",
+   "id": "0b5a0032",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813cfe9c",
+   "id": "f549a549",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48209ec0",
+   "id": "b5fdbab5",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28cf8d2",
+   "id": "eaf3f38e",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "376e1033",
+   "id": "5b346f08",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "533a7616",
+   "id": "85e4f3ee",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4729d835",
+   "id": "57746cd3",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2283fa2",
+   "id": "c8bb283c",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be86005",
+   "id": "baceabb1",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db052ce",
+   "id": "c1bfb3f1",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500b661b",
+   "id": "13a2c602",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64cf4221",
+   "id": "fbebbb04",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cee27b",
+   "id": "f46c9802",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81ce0965",
+   "id": "1abc8ef8",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641f3016",
+   "id": "41495797",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1573d2",
+   "id": "34f75f9b",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f5e85d",
+   "id": "b83f58bb",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2278e4dc",
+   "id": "ac55f6d9",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c878865",
+   "id": "ebc212c7",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba50739",
+   "id": "1baf7b19",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd50233d",
+   "id": "61bb6893",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110f3f7a",
+   "id": "337844df",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572da94f",
+   "id": "c037da91",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8612a72c",
+   "id": "6d6a1bb2",
    "metadata": {
     "hide-output": false
    },
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b694c4e1",
+   "id": "420fa626",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "895b3f9a",
+   "id": "965bdbf6",
    "metadata": {
     "hide-output": false
    },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3581893",
+   "id": "8793bf8e",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd019619",
+   "id": "10744fac",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aba583b",
+   "id": "519fc857",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0414b7",
+   "id": "981abd4d",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd325a02",
+   "id": "61ee8d8c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232ad531",
+   "id": "429f2a92",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8398ec",
+   "id": "7d791865",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d93663",
+   "id": "4eaf8df0",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80436563",
+   "id": "88284325",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321baea2",
+   "id": "bf0a67f4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25631ff0",
+   "id": "2995f0fc",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309074.7166748,
+  "date": 1764310727.187268,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
