--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8408e774",
+   "id": "49dc910a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883cb3fa",
+   "id": "5e665f50",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe80b351",
+   "id": "92d411c6",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ef350c",
+   "id": "c0f534f5",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9fbfd33",
+   "id": "c6a24c57",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573e8967",
+   "id": "2590589a",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5548a605",
+   "id": "3d8f6112",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc974940",
+   "id": "7b1caf9b",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93574b6e",
+   "id": "a2756d44",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -113,7 +113,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309074.7579,
+  "date": 1764310727.2305622,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
