--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06de518b",
+   "id": "a4eecd63",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ede9950",
+   "id": "1b5737fd",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14908d45",
+   "id": "0dd07084",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3493d51e",
+   "id": "450260cf",
    "metadata": {
     "hide-output": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93c11063",
+   "id": "44ae796a",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ebd0d7",
+   "id": "a3f91df8",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "544fdfd9",
+   "id": "fc0d5578",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62ab16e",
+   "id": "3769b72b",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f58853f",
+   "id": "7d035adf",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fccd80d",
+   "id": "db215fd0",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c7c9af",
+   "id": "ec3fffa0",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeeef964",
+   "id": "4ea4b32f",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3688de0f",
+   "id": "4acb4f24",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46e939c",
+   "id": "1855880b",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97302705",
+   "id": "b6007ed9",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b83291d",
+   "id": "d1c243c6",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8174d78",
+   "id": "6dbbc3e0",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f175c9e",
+   "id": "84ec37e8",
    "metadata": {
     "hide-output": false
    },
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a416430",
+   "id": "e9d9e70b",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdeba58e",
+   "id": "1f851ebc",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef29f887",
+   "id": "4169c9b7",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1010a5f",
+   "id": "92930745",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a89520",
+   "id": "4a2bff28",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f37dee",
+   "id": "d4cf87dd",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7f252f",
+   "id": "87f4339f",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887392e1",
+   "id": "40891bbf",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "706d4feb",
+   "id": "f15f825d",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826b6077",
+   "id": "5e706315",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7cfe121",
+   "id": "354f2758",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f1818b",
+   "id": "a084a865",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bda4f3f",
+   "id": "06b05676",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af35130",
+   "id": "4d2ed543",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa52262",
+   "id": "cd4ea833",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8fdbf9",
+   "id": "7de931be",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b87a0b6",
+   "id": "c6698685",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e15738",
+   "id": "9dbd1a61",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5664c8f1",
+   "id": "f2f9e3c5",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "245bb96a",
+   "id": "20c0b051",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97529ad3",
+   "id": "d6eed304",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106fd797",
+   "id": "ad8e93f7",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efdfd35c",
+   "id": "7641f0a8",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df11959",
+   "id": "c7a771d5",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9deb9bcd",
+   "id": "9f1a17f7",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edbcf8ea",
+   "id": "0d8ae1d8",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c685085e",
+   "id": "ecb1b304",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73bed2c9",
+   "id": "c4d081ca",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "530f9989",
+   "id": "a9c4030f",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5f512d8",
+   "id": "92cf5124",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b8b72d",
+   "id": "c2db337d",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244cb13d",
+   "id": "63944438",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39aa1e7a",
+   "id": "c8bfb9d9",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa60abb1",
+   "id": "51f94cf2",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155ea5d0",
+   "id": "a8821247",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b8671f",
+   "id": "79b87ff0",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d71314f",
+   "id": "49fc3b23",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0983ca40",
+   "id": "f22abdcd",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0b197b",
+   "id": "c59c5a07",
    "metadata": {
     "hide-output": false
    },
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74219fb",
+   "id": "6c3c1156",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7180445a",
+   "id": "1ebc67bd",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdfe2dc5",
+   "id": "ab6e004f",
    "metadata": {
     "hide-output": false
    },
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83775cc5",
+   "id": "74e1d492",
    "metadata": {
     "hide-output": false
    },
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d136d1a7",
+   "id": "ab81ffb8",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f020f0d",
+   "id": "9155f0ba",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9511e81e",
+   "id": "585ce743",
    "metadata": {
     "hide-output": false
    },
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85747b1a",
+   "id": "306e992a",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470a6052",
+   "id": "9dbe8282",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51d2e687",
+   "id": "399d7b70",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1a24c21",
+   "id": "61d56119",
    "metadata": {
     "hide-output": false
    },
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d58ad4",
+   "id": "37d7dd2a",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c355d446",
+   "id": "2552a4d0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8c81c0",
+   "id": "ac851c8f",
    "metadata": {
     "hide-output": false
    },
@@ -1412,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6156867b",
+   "id": "72e88a26",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5e0353",
+   "id": "3f93db97",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff72b6c5",
+   "id": "ba3a5dc6",
    "metadata": {
     "hide-output": false
    },
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f88b31",
+   "id": "00f2f906",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c233e71",
+   "id": "44690885",
    "metadata": {
     "hide-output": false
    },
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99427fa",
+   "id": "da4700fd",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f1855c9",
+   "id": "0d2fe523",
    "metadata": {
     "hide-output": false
    },
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862d18ad",
+   "id": "f381c619",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1509,7 +1509,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309075.241252,
+  "date": 1764310727.7515943,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
