--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42ebb3a3",
+   "id": "1dcfcb3c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8bd364",
+   "id": "5c8aeb47",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b7438d",
+   "id": "cd0ff467",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309075.3251374,
+  "date": 1764310727.840967,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
