--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1731588",
+   "id": "8f94e3c7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd9902d",
+   "id": "17d8a5f1",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b58b1f0",
+   "id": "f0d6cafa",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634fba03",
+   "id": "9626a28e",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e731ec62",
+   "id": "f5a61e0a",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20592060",
+   "id": "6d21b412",
    "metadata": {
     "hide-output": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca74c8e",
+   "id": "5224a6a9",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f5eb4e",
+   "id": "e7cce80d",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd03850e",
+   "id": "82b309de",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "054250c6",
+   "id": "832bf5f5",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c49f41",
+   "id": "1b2b05da",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71fe7bb1",
+   "id": "fd987867",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8db578d",
+   "id": "53213225",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45168c2a",
+   "id": "3ba39290",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b9e64e0",
+   "id": "bf191fc5",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1751d92a",
+   "id": "d035a579",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13955874",
+   "id": "fdacb89f",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb48be24",
+   "id": "80566467",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e4a559",
+   "id": "b65a6672",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "702a4afa",
+   "id": "319ad81a",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bbceee",
+   "id": "4c5616ac",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11afda7b",
+   "id": "ab329608",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f79a7b",
+   "id": "3dd7abbd",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e1764e",
+   "id": "5f8dc384",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee454cbc",
+   "id": "bfbf2197",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3266d8d3",
+   "id": "dde16c3a",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3783a1c",
+   "id": "243d567d",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7521649f",
+   "id": "fe4ea56c",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e237fd",
+   "id": "5f98bf55",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fd66d4",
+   "id": "9c8d2e11",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d387f690",
+   "id": "c8315a14",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0438bd05",
+   "id": "9686ec4b",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7421203c",
+   "id": "53ff40a3",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e71c1e81",
+   "id": "a44b7b8a",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83edb028",
+   "id": "88ea80a3",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e3a0600",
+   "id": "d5d37ff6",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7edf0a",
+   "id": "8d67984f",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c14ccb3",
+   "id": "870e77bc",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00be22c3",
+   "id": "fb93ef72",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47eb9fe4",
+   "id": "8d04421a",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39890a46",
+   "id": "354e9f6a",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc064d7",
+   "id": "4b26720d",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8342d0a1",
+   "id": "977018f6",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc264bb3",
+   "id": "236d1e68",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -703,7 +703,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309074.910957,
+  "date": 1764310727.3962147,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
