--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f626f3ab",
+   "id": "e5156666",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "525e8dd3",
+   "id": "ec022be5",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca3e407",
+   "id": "2d7aa8dc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ab2899",
+   "id": "0ebfb625",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9d84a7",
+   "id": "7dea44f3",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f348738",
+   "id": "2d5e0c63",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3248b8",
+   "id": "eedfcd4b",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de536e36",
+   "id": "54cfc26b",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e8f6037",
+   "id": "0954b72b",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a18756",
+   "id": "f6036e66",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcba57ee",
+   "id": "fc9dc610",
    "metadata": {
     "hide-output": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24eb1d51",
+   "id": "811c7109",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de43a437",
+   "id": "ef0bc3e5",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33462235",
+   "id": "a89a9c51",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb7707a",
+   "id": "77d46681",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa031f8",
+   "id": "e195ffc6",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "531dfe31",
+   "id": "6577f9d6",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6adfd93",
+   "id": "c7ab743f",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db791c9a",
+   "id": "9f9863c8",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02089091",
+   "id": "ccc39dd6",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f42e6c",
+   "id": "d0f49b0e",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fa9e46",
+   "id": "69805116",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57678c69",
+   "id": "9a9857e7",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca342256",
+   "id": "2078d100",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670d849f",
+   "id": "61d2e334",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80f734cd",
+   "id": "adc8bd6d",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fc8179a",
+   "id": "0d4f7d5e",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb13ad3",
+   "id": "a8ace8f2",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055a5e63",
+   "id": "7e6bdc31",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b8a6a34",
+   "id": "f9d681f5",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86b4a619",
+   "id": "83f165b8",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70096ac",
+   "id": "fe9356c6",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ec5302",
+   "id": "8582a568",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22530cc7",
+   "id": "283b0061",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e95a4ed",
+   "id": "1a48ad35",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df95cb0",
+   "id": "f39dc5a0",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f1ee2d",
+   "id": "13dde11c",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d66ec22",
+   "id": "1d9511fc",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5abe84",
+   "id": "c17a5a5b",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aecce730",
+   "id": "1ed86184",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b810dc1",
+   "id": "1405ea5a",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "352e552f",
+   "id": "c99ac51d",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bbff61",
+   "id": "6278d0f4",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1270b475",
+   "id": "83b9c9bc",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a5a5c5a",
+   "id": "9c164c2e",
    "metadata": {
     "hide-output": false
    },
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4fc215",
+   "id": "6a9440ac",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd66a608",
+   "id": "dad05e48",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08598318",
+   "id": "0d33ce97",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81b531f7",
+   "id": "497b269d",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01652e77",
+   "id": "c4db51b0",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b57dca5e",
+   "id": "f1d44e4a",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e540c1d",
+   "id": "ac026a6d",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5be0e7e",
+   "id": "a964b3c2",
    "metadata": {
     "hide-output": false
    },
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6670ee2b",
+   "id": "be9a3c56",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77bc12a7",
+   "id": "84ff5e22",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37388af",
+   "id": "7ecbf9d6",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5612099e",
+   "id": "1bd28468",
    "metadata": {
     "hide-output": false
    },
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "256c12af",
+   "id": "73421d52",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ff4f01",
+   "id": "f8d9f46a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5ce40f",
+   "id": "cbd89921",
    "metadata": {
     "hide-output": false
    },
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36ca33f4",
+   "id": "6daf0e58",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fb22a1",
+   "id": "5b994d7e",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0059a64c",
+   "id": "ff190973",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed47ad7",
+   "id": "8319ced4",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74fe911",
+   "id": "86d65dfb",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717aeeef",
+   "id": "23dd810b",
    "metadata": {
     "hide-output": false
    },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe30a52",
+   "id": "14682f52",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eadeaed4",
+   "id": "cc57602b",
    "metadata": {
     "hide-output": false
    },
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "052d7684",
+   "id": "90eb9342",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c1c1ed8",
+   "id": "0ee64ed8",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c110ace3",
+   "id": "4c58b660",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9d1c3c",
+   "id": "b05a53d3",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f2532a",
+   "id": "ce46b239",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2e7c07",
+   "id": "9d55c9e6",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2260ea2",
+   "id": "58c49d72",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d98f1ebd",
+   "id": "0d5968d8",
    "metadata": {
     "hide-output": false
    },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5080aab5",
+   "id": "f01ec985",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c37d230",
+   "id": "822863a5",
    "metadata": {
     "hide-output": false
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "800df7dc",
+   "id": "25f40213",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650391f7",
+   "id": "b0e841ad",
    "metadata": {
     "hide-output": false
    },
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc76244d",
+   "id": "83f933b0",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299e931a",
+   "id": "9209f8e9",
    "metadata": {
     "hide-output": false
    },
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d466401d",
+   "id": "19f6567d",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1661,7 +1661,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309075.0490365,
+  "date": 1764310727.549249,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
