--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92d79b76",
+   "id": "9ddb05d6",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a1f408",
+   "id": "643ade7c",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09bab77b",
+   "id": "52c0c4bb",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3cfb29",
+   "id": "609f9084",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3777fa",
+   "id": "0f42d112",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667346ec",
+   "id": "1f309172",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a763ae",
+   "id": "223d0e4b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede188ce",
+   "id": "3cfffbfc",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fbe6cc",
+   "id": "3dc87dcc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17dffb74",
+   "id": "0d4fc941",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be451316",
+   "id": "95f72ffe",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc3a8a2",
+   "id": "2d073e06",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea448229",
+   "id": "b6c30121",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c6ddc0",
+   "id": "9081d517",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f60378",
+   "id": "24b88a8d",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b6df07",
+   "id": "4436f6dd",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c807db8",
+   "id": "a507a390",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0749c281",
+   "id": "f289be69",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7254c4",
+   "id": "1129ed35",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6407413c",
+   "id": "794bba76",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8969029b",
+   "id": "9e1edc6a",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49008fb7",
+   "id": "8c083157",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd231d4c",
+   "id": "6708549c",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3ec428",
+   "id": "e6fec9a8",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f488f9a5",
+   "id": "5292b079",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd711d96",
+   "id": "c2f38024",
    "metadata": {
     "hide-output": false
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c568d2bd",
+   "id": "dba11683",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed42b796",
+   "id": "6060c324",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcca685d",
+   "id": "67b62637",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c26c267e",
+   "id": "5d6db521",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2895956",
+   "id": "e861bac7",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906d9462",
+   "id": "f4adfe5f",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7103afca",
+   "id": "f1777528",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d423883",
+   "id": "c7e7a8a0",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69debb56",
+   "id": "6c7733e2",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6eacc0",
+   "id": "96b2a3db",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ec4bae",
+   "id": "0b18872a",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbfdaeaf",
+   "id": "1519ba48",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bcee970",
+   "id": "40689be1",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e965a2",
+   "id": "ba6fbba7",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b45889a",
+   "id": "5834dcec",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7f4bfb",
+   "id": "990372e1",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac2ff6c",
+   "id": "cec8f3b5",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14772d3d",
+   "id": "324db940",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07fdb8ca",
+   "id": "dd70d6d8",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa42d4d",
+   "id": "16964225",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09aee86",
+   "id": "6ad3fb87",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d35516f",
+   "id": "456c804e",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77fd0107",
+   "id": "235e0710",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0086c39",
+   "id": "2c71ac40",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39873d3",
+   "id": "c31c900f",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f9cde0",
+   "id": "4ef114bd",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f7bef12",
+   "id": "154deb6c",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1904559b",
+   "id": "7ec1b6d9",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ae9628",
+   "id": "989e34d6",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df05640",
+   "id": "e4890260",
    "metadata": {
     "hide-output": false
    },
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3ffcfcb",
+   "id": "d1d5ecc3",
    "metadata": {
     "hide-output": false
    },
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101605d6",
+   "id": "0cc5dc7a",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af737f90",
+   "id": "b7408318",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +989,7 @@
   }
  ],
  "metadata": {
-  "date": 1764309075.130474,
+  "date": 1764310727.6326795,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
